# SpatialEvo

./: .gitignore  README.md  quickstart.sh
config/: rubric_config.yaml  task_config.yaml
data/: README.md
easy_r1/: pyproject.toml  setup.py  train_spatialevo.sh
easy_r1/dataset/: scannet_train_multi_frame.jsonl  scannet_val_multi_frame.jsonl  spatialevo_train.jsonl
easy_r1/evaluation/: datasets_loader.py
easy_r1/examples/: config.yaml  config_scannet.yaml  config_spatialevo.yaml
easy_r1/scripts/: model_merger.py
easy_r1/training/format_prompt/: answer_invalid_question_round2.jinja  answer_question_round2.jinja  question_generate_image_pair_task_conditioned.jinja  question_generate_scene_task_conditioned.jinja  question_generate_single_image_task_conditioned.jinja  question_generate_task_conditioned_specs.json  task_answer_format_hints.json
easy_r1/training/reward_function/: __init__.py  majority_correctness_reward.py  question_quality_reward.py  unified_reward.py
easy_r1/validation/reward_function/: README.md  __init__.py  accuracy_reward.py  test_accuracy_reward.py
easy_r1/verl/: protocol.py
easy_r1/verl/trainer/: config.py  core_algos.py  data_loader.py  metrics.py  ray_trainer.py
easy_r1/verl/utils/: dataset.py  ulysses.py
easy_r1/verl/workers/: fsdp_workers.py
easy_r1/verl/workers/actor/: dp_actor.py
easy_r1/verl/workers/reward/: function.py
easy_r1/verl/workers/rollout/: vllm_rollout_spmd.py
easy_r1/vllm_service_init/: start.sh  start_vllm_server.py
examples/: image_pair_tasks_example.py  invalid_recovery_example.py  (+3 more)
(+52 files in other folders)
